[package]
name = "netif"
version = "0.1.4"
edition = "2021"
license = "ISC"
description = "List the network interfaces on the system."

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "winsock2"] }
